[package]
name = "cach"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-utils = "0.8.20"
hashbrown = { version = "0.14.5", features = ["raw"] }
parking_lot = "0.12.3"
scc = "2.2.1"
smallvec = { version = "1.13.2", features = ["union", "const_generics"] }
rand = { version = "0.8.5", features = ["small_rng", "std_rng"], optional = true }
stable_deref_trait = "1.2.0"

[features]
default = ["rand"]
